--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Booleaner - Internet al servizio pubblico</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <header id="main-header">
+        <img id="main-logo" src="img/logo.svg" alt="Logo - the Booleaner">
+    </header>
 </body>
 </html>
