create img section in article

--- a/index.html
+++ b/index.html
@@ -1,15 +1,34 @@
 <!DOCTYPE html>
 <html lang="it">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Booleaner - Internet al servizio pubblico</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-    <header id="main-header">
-        <img id="main-logo" src="img/logo.svg" alt="Logo - the Booleaner">
-    </header>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>The Booleaner - Internet al servizio pubblico</title>
+        <link rel="stylesheet" href="css/style.css">
+    </head>
+    <body>
+        <header id="main-header">
+            <img id="main-logo" src="img/logo.svg" alt="Logo - the Booleaner">
+        </header>
+        <main>
+            <article>
+                <header>
+                    <h1 class="title">Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
+                    <div class="medium-font text-gray">
+                        Scritto da <a href="index.html" class="link">The Booleaner</a>
+                    </div>
+                    <div class="small-font text-gray">il 10/10/2020</div>
+                </header>
+                <section>
+                    <img class="img-size" src="img/tim-1.jpg" alt="Tim1">
+                    <img class="img-size" src="img/tim-2.jpg" alt="Tim2">
+                    <footer>
+                        <div class="small-font" id="creditPic1">1st Photo: Jhon S. and James L. Knight Foundation, by Scott Henrichsen</div>
+                        <div class="small-font" id="creditPic2">2st Photo: Wikimedia, by Paul Clarke</div>
+                    </footer>
+                </section>
+            </article>
+        </main>
+    </body>
 </html>
