ul bug check (ticket)

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
         </header>
         <main>
             <article>
-                <header>
+                <header class="margin-bottom" id="article-header">
                     <h1 class="title">Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
-                    <div class="medium-font text-gray">
+                    <div class="text-gray">
                         Scritto da <a href="index.html" class="link">The Booleaner</a>
                     </div>
                     <div class="small-font text-gray">il 10/10/2020</div>
                 </header>
-                <section>
+                <section class="margin-bottom" id="mainSnapshot">
                     <img class="img-size" src="img/tim-1.jpg" alt="Tim1">
                     <img class="img-size" src="img/tim-2.jpg" alt="Tim2">
                     <footer>
@@ -28,6 +28,20 @@
                         <div class="small-font" id="creditPic2">2st Photo: Wikimedia, by Paul Clarke</div>
                     </footer>
                 </section>
+                <section id="data1">
+                    <p class="margin-bottom">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium est molestiae velit minima amet illum autem quod dolores? Saepe aperiam quisquam hic totam distinctio quam perspiciatis <span class="highlighted">excepturi facilis natus maiores!
+                        Facere, hic suscipit corporis aliquid</span>, delectus consectetur velit aliquam non dolorem totam molestias asperiores rem voluptas ipsam! Autem dolor aliquam, mollitia magni ex culpa magnam pariatur nesciunt voluptatibus natus explicabo.
+                    </p>
+                    <!-- non so perchè non mi fa vedere il list-type -->
+                    <ul class="unordered-list">
+                        <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Earum consectetur vero quibusdam voluptate molestias recusandae saepe id ipsam velit laborum in ut, quos est nobis?</li>
+                        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem modi iure incidunt molestiae repellat omnis, maxime a reiciendis corrupti alias.</li>
+                        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad quos incidunt qui neque architecto. Doloribus, voluptates magnam?</li>
+                    </ul>
+                    
+                </section>
+                
             </article>
         </main>
     </body>
