implement article on main

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <header id="main-header">
             <img id="main-logo" src="img/logo.svg" alt="Logo - the Booleaner">
         </header>
-        <main>
+        <main class="margin-bottom">
             <article>
                 <header class="margin-bottom" id="article-header">
                     <h1 class="title">Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
@@ -29,19 +29,46 @@
                     </footer>
                 </section>
                 <section id="data1">
-                    <p class="margin-bottom">
+                    <p class="margin-bottom" id="intro">
                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium est molestiae velit minima amet illum autem quod dolores? Saepe aperiam quisquam hic totam distinctio quam perspiciatis <span class="highlighted">excepturi facilis natus maiores!
                         Facere, hic suscipit corporis aliquid</span>, delectus consectetur velit aliquam non dolorem totam molestias asperiores rem voluptas ipsam! Autem dolor aliquam, mollitia magni ex culpa magnam pariatur nesciunt voluptatibus natus explicabo.
                     </p>
-                    <!-- non so perchè non mi fa vedere il list-type -->
-                    <ul class="unordered-list">
-                        <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Earum consectetur vero quibusdam voluptate molestias recusandae saepe id ipsam velit laborum in ut, quos est nobis?</li>
+                    <ul class="margin-bottom">
+                        <li>Lorem, ipsum dolor sit amet elit. Earum consectetur vero quibusdam voluptate molestias recusandae saepe id ipsam velit laborum in ut, quos est nobis?</li>
                         <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem modi iure incidunt molestiae repellat omnis, maxime a reiciendis corrupti alias.</li>
                         <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad quos incidunt qui neque architecto. Doloribus, voluptates magnam?</li>
                     </ul>
-                    
+                    <table class="margin-bottom" id="table-data1">
+                        <thead>
+                            <tr class="bg-blue1">
+                                <th>Lorem, ipsum dolor</th>
+                                <th>Lorem, ipsum dolor</th>
+                                <th>Lorem, ipsum dolor</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Lorem, ipsum dolor.</td>
+                                <td>Lorem, ipsum dolor.</td>
+                                <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque sint enim asperiores dolorum magnam id temporibus nisi debitis? Nemo eligendi laboriosam sapiente libero deleniti fugiat esse minus rerum sint asperiores.</td>
+                            </tr>
+                            <tr>
+                                <td>Lorem, ipsum dolor.</td>
+                                <td>Lorem, ipsum dolor.</td>
+                                <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque sint enim asperiores dolorum magnam id temporibus nisi debitis? Nemo eligendi laboriosam sapiente libero deleniti fugiat esse minus rerum sint asperiores.</td>
+                            </tr>
+                            <tr>
+                                <td>Lorem, ipsum dolor.</td>
+                                <td>Lorem, ipsum dolor.</td>
+                                <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque sint enim asperiores dolorum magnam id temporibus nisi debitis? Nemo eligendi laboriosam sapiente libero deleniti fugiat esse minus rerum sint asperiores.</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <p id="conclusion">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium est molestiae velit minima Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sunt, velit! amet illum autem quod dolores? Saepe aperiam quisquam hic totam distinctio quam perspiciatis <span class="highlighted">excepturi facilis natus maiores!
+                        Facere, hic suscipit corporis aliquid</span>, delectus consectetur velit aliquam non dolorem totam molestias asperiores rem voluptas ipsam! Autem dolor aliquam, mollitia magni ex culpa magnam pariatur nesciunt voluptatibus natus explicabo.
+                    </p>
                 </section>
-                
             </article>
         </main>
     </body>
