--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <header id="main-header">
             <img id="main-logo" src="img/logo.svg" alt="Logo - the Booleaner">
         </header>
-        <main class="margin-bottom">
+        <main class="padding">
             <article>
                 <header class="margin-bottom" id="article-header">
                     <h1 class="title">Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
@@ -40,7 +40,7 @@
                     </ul>
                     <table class="margin-bottom" id="table-data1">
                         <thead>
-                            <tr class="bg-blue1">
+                            <tr class="bg-coralblue">
                                 <th>Lorem, ipsum dolor</th>
                                 <th>Lorem, ipsum dolor</th>
                                 <th>Lorem, ipsum dolor</th>
@@ -71,5 +71,14 @@
                 </section>
             </article>
         </main>
+        <footer class="padding">
+            <h4 class="text-gray small-margin-bottom">Potrebbero interessarti</h4>
+            <article class="card small-margin-bottom" id="pcArticle">
+                <h3>Lorem, ipsum dolor.</h3>
+            </article>
+            <article class="card" id="dataArticle">
+                <h3>Lorem, ipsum dolor.</h3>
+            </article>
+        </footer>
     </body>
 </html>
