implement a to article on footer

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <header class="margin-bottom" id="article-header">
                     <h1 class="title">Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
                     <div class="text-gray">
-                        Scritto da <a href="index.html" class="link">The Booleaner</a>
+                        Scritto da <a href="#" class="link">The Booleaner</a>
                     </div>
                     <div class="small-font text-gray">il 10/10/2020</div>
                 </header>
@@ -73,12 +73,17 @@
         </main>
         <footer class="padding">
             <h4 class="text-gray small-margin-bottom">Potrebbero interessarti</h4>
-            <article class="card small-margin-bottom" id="pcArticle">
-                <h3>Lorem, ipsum dolor.</h3>
-            </article>
-            <article class="card" id="dataArticle">
-                <h3>Lorem, ipsum dolor.</h3>
-            </article>
+            <a href="#">
+                <article class="card small-margin-bottom" id="pcArticle">
+                    <h3>Lorem, ipsum dolor.</h3>
+                </article>
+            </a>
+            <a href="#">
+                <article class="card" id="dataArticle">
+                    <h3>Lorem, ipsum dolor.</h3>
+                </article>
+            </a>
+        </footer>
         </footer>
     </body>
 </html>
